staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
