staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-wdpress
  namespace: staging
spec:
  replicas: 1
  selector:
    app: stg-web-wdpress
  template:
    spec:
      containers:
      - name: httpd
