staging/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-web-wdpress
spec:
  type: ClusterIP
