staging/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: route
spec:
  host: www.stg-web.lab.net
  to:
    kind: Service
    name: svc-web-wdpress
